Correct letter spacing on framework page

--- a/src/pages/Framework/Framework.css
+++ b/src/pages/Framework/Framework.css
@@ -12,6 +12,7 @@
   margin-bottom: 5rem;
   line-height: 1.7;
   font-size: 2.5rem;
+  letter-spacing: 0.01em;
 }
 .heroHeading {
   margin-bottom: 5rem;
@@ -38,6 +39,7 @@
   padding: 2rem;
   width: 33%;
   text-align: center;
+  letter-spacing: -0.03em;
   ;
   img {
     width: 5rem;
@@ -48,6 +50,7 @@
     margin-left: auto;
     margin-right: auto;
     line-height: 1.5;
+    letter-spacing: inherit;
     color: #8c8c8c;
   }
   h3 {
@@ -55,6 +58,7 @@
     text-transform: lowercase;
     font-family: Serverless, monospace;
     margin-top: 2rem;
+    letter-spacing: inherit;
     font-weight: 600;
   }
 }
@@ -140,6 +144,7 @@
   width: 33%;
   padding: 2rem;
   text-align: center;
+  letter-spacing: -0.03em;
 ;
 
   img {
@@ -152,6 +157,7 @@
     text-transform: lowercase;
     margin-bottom: 3rem;
     margin-top: 1rem;
+    letter-spacing: inherit;
   }
   p {
     font-size: 2.1rem;
@@ -159,6 +165,7 @@
     margin-left: auto;
     margin-right: auto;
     line-height: 1.4;
+    letter-spacing: inherit;
     color: #8c8c8c;
   }
 }
